Dust off the profanity component and make sure a player skull isn't given that has an offensive username